# resume-builder

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  add_user.py  deploy.sh  pyproject.toml  run_web.py
.github/workflows/: deploy.yml
career_docs/: 01-career-timeline.example.md  02-skills-and-achievements.example.md
deploy/: server-deploy.sh
resume_builder/: cli.py  config.py  exporter.py  renderer.py  schema.py  tailor.py
resume_builder/prompts/: system.txt  user_template.txt
templates/: resume.html.j2
web_app/: app.py  auth.py  user_data.py
web_app/templates/: base.html  error.html  generate.html  loading.html  profile.html  review.html  setup.html
